--- a/src/main/resources/Java/model.mustache
+++ b/src/main/resources/Java/model.mustache
@@ -7,9 +7,7 @@ package {{package}};
 public class {{classname}} {
   {{#vars}}
 
-  {{#notes}}/* {{notes}} */
-  {{/notes}}
-  {{#description}}/* {{description}} */
+  {{#description}}/* {{{description}}} */
   {{/description}}
   private {{{datatype}}} {{name}} = {{{defaultValue}}};
   {{/vars}}
