--- a/src/main/resources/Java/api.mustache
+++ b/src/main/resources/Java/api.mustache
@@ -1,7 +1,7 @@
 package {{package}};
 
-import com.wordnik.client.ApiException;
-import com.wordnik.client.ApiInvoker;
+import {{invokerPackage}}.ApiException;
+import {{invokerPackage}}.ApiInvoker;
 {{#imports}}import {{import}};
 {{/imports}}
 
