--- a/src/main/resources/objc/model-body.mustache
+++ b/src/main/resources/objc/model-body.mustache
@@ -5,46 +5,51 @@
 
 @implementation {{classname}}
 
-{{#vars}}
-@synthesize {{name}} = _{{name}};
-{{/vars}}
+-(id){{#vars}}{{name}}: ({{datatype}}) {{name}}{{#hasMore}}{{newline}}    {{/hasMore}}{{/vars}}{{newline}}{
+  {{#vars}}_{{name}} = {{name}};
+  {{/vars}}
 
-- (id) {{#vars}}{{name}}: ({{datatype}}) {{name}}
-       {{/vars}}
-       {
-          {{#vars}}_{{name}} = {{name}};
-          {{/vars}}
+    return self;
+}
 
-            return self;
-       }
-
-- (id) initWithValues: (NSDictionary*)dict
+-(id) initWithValues:(NSDictionary*)dict
 {
-    {{#vars}}
+    self = [super init];
+    if(self) {
+        {{#vars}}
 
-    {{#isPrimitiveType}}
-    _{{name}} = [dict objectForKey:@"{{baseName}}"];
-    {{/isPrimitiveType}}
-    {{#complexType}}
-    id {{name}}_dict = [dict objectForKey:@"{{name}}"];
-    {{#isContainer}}
-    if([{{name}}_dict isKindOfClass:[NSArray class]]) {
-        if([(NSArray*){{name}}_dict count] > 0) {
+        {{#isPrimitiveType}}
+        _{{name}} = dict[@"{{baseName}}"]; 
+        {{/isPrimitiveType}}
+        {{#complexType}}
+        id {{name}}_dict = dict[@"{{name}}"];
+        {{#isContainer}}
+        if([{{name}}_dict isKindOfClass:[NSArray class]]) {
+
             NSMutableArray * objs = [[NSMutableArray alloc] initWithCapacity:[(NSArray*){{name}}_dict count]];
-            for (NSDictionary* dict in (NSArray*){{name}}_dict) {
-                {{{complexType}}}* d = [[{{{complexType}}} alloc]initWithValues:dict];
-                [objs addObject:d];
-            }
-            _{{{name}}} = [[NSArray alloc] initWithArray:objs];
-        }
-    }
-    {{/isContainer}}
-    {{#isNotContainer}}
-        _{{name}} = [[{{complexType}} alloc]initWithValues:{{name}}_dict];
-    {{/isNotContainer}}
-    {{/complexType}}
-    {{/vars}}
 
+            if([(NSArray*){{name}}_dict count] > 0) {
+                for (NSDictionary* dict in (NSArray*){{name}}_dict) {
+                    {{{complexType}}}* d = [[{{{complexType}}} alloc] initWithValues:dict];
+                    [objs addObject:d];
+                }
+                
+                _{{{name}}} = [[NSArray alloc] initWithArray:objs];
+            }
+            else {
+                _{{name}} = [[NSArray alloc] init];
+            }
+        }
+        else {
+            _{{name}} = [[NSArray alloc] init];
+        }
+        {{/isContainer}}
+        {{#isNotContainer}}
+            _{{name}} = [[{{complexType}} alloc]initWithValues:{{name}}_dict];
+        {{/isNotContainer}}
+        {{/complexType}}
+        {{/vars}}{{newline}}
+    }
     return self;
 }
 
@@ -55,21 +60,21 @@
     if(_{{name}} != nil){
         if([_{{name}} isKindOfClass:[NSArray class]]){
             NSMutableArray * array = [[NSMutableArray alloc] init];
-            for( {{complexType}} * {{name}} in (NSArray*)_{{name}}) {
+            for( {{complexType}} *{{name}} in (NSArray*)_{{name}}) {
                 [array addObject:[(NIKSwaggerObject*){{name}} asDictionary]];
             }
-            [dict setObject:array forKey:@"{{baseName}}"];
+            dict[@"{{baseName}}"] = array;
         }
         else if(_{{name}} && [_{{name}} isKindOfClass:[NIKDate class]]) {
             NSString * dateString = [(NIKDate*)_{{name}} toString];
             if(dateString){
-                [dict setObject:dateString forKey:@"{{name}}"];   
+                dict[@"{{name}}"] = dateString;
             }
         }
     }
     else {
     {{/complexType}}
-        if(_{{name}} != nil) [dict setObject:{{#complexType}}[(NIKSwaggerObject*){{/complexType}}_{{name}} {{#complexType}}asDictionary]{{/complexType}} forKey:@"{{baseName}}"];
+        if(_{{name}} != nil) dict[@"{{baseName}}"] = {{#complexType}}[(NIKSwaggerObject*){{/complexType}}_{{name}} {{#complexType}}asDictionary]{{/complexType}};
     {{#complexType}}
     }
     {{/complexType}}
