--- a/src/main/resources/objc/model-header.mustache
+++ b/src/main/resources/objc/model-header.mustache
@@ -6,14 +6,8 @@
 {{#models}}
 {{#model}}
 
-@interface {{classname}} : NIKSwaggerObject {
-@private
-    {{#vars}}
-    {{datatype}} _{{name}}; //{{baseType}}
-    {{/vars}}
-}
+@interface {{classname}} : NIKSwaggerObject
 
-{{newline}}
 {{#vars}}
 @property(nonatomic) {{datatype}} {{name}};
 {{/vars}}
