--- a/src/main/resources/scala/api.mustache
+++ b/src/main/resources/scala/api.mustache
@@ -26,7 +26,7 @@ class {{classname}} {
 
     {{#requiredParamCount}}
     // verify required params are set
-    (Set({{/requiredParamCount}}{{#requiredParams}} {{baseName}}{{#hasMore}}, {{/hasMore}}{{/requiredParams}}{{#requiredParamCount}}) - null).size match {
+    (Set({{/requiredParamCount}}{{#requiredParams}} {{paramName}}{{#hasMore}}, {{/hasMore}}{{/requiredParams}}{{#requiredParamCount}}) - null).size match {
        case {{requiredParamCount}} => // all required values set
        case _ => throw new Exception("missing required params")
     }
