--- a/samples/server-generator/node/templates/main.mustache
+++ b/samples/server-generator/node/templates/main.mustache
@@ -1,11 +1,11 @@
 var express = require("express")
  , url = require("url")
- , swagger = require("./Common/node/swagger.js")
+ , swagger = require("swagger-node-express")
  , db = false
 
-var app = express.createServer(
-  function(req, res, next) { if (req.db === undefined) { req.db = db; } next(); });
+var app = express();
 app.use(express.bodyParser());
+
 swagger.setAppHandler(app);  
 
 // resources for the demo
