--- a/src/main/resources/python3/swagger.mustache
+++ b/src/main/resources/python3/swagger.mustache
@@ -52,7 +52,12 @@ class ApiClient:
                     sentQueryParams[param] = value
             url = url + '?' + urllib.parse.urlencode(sentQueryParams)
 
-        if method in ['POST', 'PUT', 'DELETE']:
+        if method in ['GET']:
+
+            #Options to add statements later on and for compatibility
+            pass
+
+        elif method in ['POST', 'PUT', 'DELETE']:
 
             if postData:
                 headers['Content-type'] = 'application/json'
