--- a/src/main/resources/python3/swagger.mustache
+++ b/src/main/resources/python3/swagger.mustache
@@ -102,7 +102,7 @@ class ApiClient:
     def sanitizeForSerialization(self, obj):
         """Dump an object into JSON for POSTing."""
 
-        if not obj:
+        if type(obj) == type(None):
             return None
         elif type(obj) in [str, int, float, bool]:
             return obj
