Fixed issues with code generation

--- a/src/main/resources/objc/model-body.mustache
+++ b/src/main/resources/objc/model-body.mustache
@@ -71,6 +71,9 @@
                 dict[@"{{name}}"] = dateString;
             }
         }
+        else if(_{{name}} && [_{{name}} isKindOfClass:[NIKSwaggerObject class]]) {
+            dict[@"{{baseName}}"] = [(NIKSwaggerObject*)_{{name}} asDictionary];
+        }
     }
     else {
     {{/complexType}}
